--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,9 @@
-<head>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/home/home_styles.css' %}">
-    <!-- Bootstrap 5 CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
-    <!-- Remix Icon CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/2.5.0/remixicon.css">
-    <!-- Bootstrap 5 Bundle JS (includes Popper) -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
+<!-- home.html -->
+{% extends "base.html" %}
 
-    <script src="{% static 'js/home/home_js.js' %}"></script>
-</head>
+{% block title %}Home - ngoctu125.com{% endblock title %}
 
-
-
-<body>
-    <section class="navigation" id="home">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Brand Name</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="ri-menu-3-line menu-icon"></i>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#header">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#services">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#work">Work</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#blog">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#address-bar">Contact</a>
-                            </li>
-                        </ul>
-                        <a href="#" class='nav-link'><i class="ri-search-2-line"></i></a>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </section>
-
+{% block content %}
     <section class="header" id="header">
         <div class="intro py-md-5 py-4">
         <div class="container py-md-5 py-4">
@@ -187,50 +141,6 @@
         </div>
         </div>
     </section>
-    <section class="work py-md-5 py-4" id="work">
-        <div class="container py-md-5 py-4">
-        <div class="row">
-            <div class="col-6">
-            <div class="divider-shape"></div>
-            <h2>Our Works</h2>
-            <p>This is how we work.</p>
-            </div>
-            <div class="col-6 d-flex justify-content-end align-items-center">
-            <a href="#" class='btn btn-main'>View All</a>
-            </div>
-        </div>
-        <div>
-            <div class="row">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <ol class="carousel-indicators">
-                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://images.unsplash.com/photo-1508739773434-c26b3d09e071?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://images.unsplash.com/photo-1519802772250-a52a9af0eacb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://images.unsplash.com/photo-1508739773434-c26b3d09e071?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="d-block w-100" alt="...">
-                </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-                </a>
-            </div>
-            </div>
-        </div>
-        </div>
-    </section>
     <section class="about py-md-5 py-4" id="about">
         <div class="container py-md-5 py-4">
         <div class="row">
@@ -300,42 +210,4 @@
         </div>
         </div>
     </section>
-    <section class="address-bar py-md-5 py-4" id="address-bar">
-        <div class="container">
-        <div class="row justify-content-evenly text-center">
-            <div class="col-md-3 mb-md-0 mb-3">
-            <a href="#">
-                <h3>USA</h3>
-                <p>0123456789</p>
-            </a>
-            </div>
-            <div class="col-md-3">
-            <a href="#">
-                <h3>UK</h3>
-                <p>0123456789</p>
-            </a>
-            </div>
-        </div>
-        </div>
-    </section>
-    <section class="footer-bar pt-4" id="footer-bar">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-6 mb-md-0 mb-3">
-            Copyright &copy; 2020, Cloc Digital.
-            </div>
-            <div class="col-md-6 d-md-flex justify-content-end">
-            <ul class="list-unstyled">
-                <li class="d-sm-inline ps-2 mb-md-0 mb-2"><a href="#">Disclaimer</a></li>
-                <li class="d-sm-inline ps-2 mb-md-0 mb-2"><a href="#">Privacy</a></li>
-                <li class="d-sm-inline ps-2 mb-md-0 mb-2"><a href="#">Terms of Services</a></li>
-            </ul>
-            </div>
-        </div>
-        </div>
-    </section>
-    <button class='nav-link darkthemebtn btn shadow rounded-start'><i class="ri-sun-fill"></i>
-    </button>
-    <button class='nav-link back-to-top btn shadow rounded-start'><i class="ri-arrow-up-s-line"></i>
-    </button>
-</body>
+{% endblock content %}
