--- a/templates/home.html
+++ b/templates/home.html
@@ -24,10 +24,10 @@
             <div class="col-md-4 mb-md-0 mb-2">
                 <div class="card shadow-sm">
                 <div class="card-body">
-                    <i class="ri-bar-chart-grouped-line ri-3x mb-5"></i>
-                    <h3 class="card-title">Card title</h3>
+                    <i class="ri-rocket-fill ri-3x mb-5"></i>
+                    <h3 class="card-title">About me</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Hello! I'm Tu. I'm a python developer in Viet Nam. Hope you like it.</p>
                 </div>
                 </div>
             </div>
@@ -35,19 +35,19 @@
                 <div class="card shadow-sm">
                 <div class="card-body">
                     <i class="ri-pie-chart-2-fill ri-3x mb-5"></i>
-                    <h3 class="card-title">Card title</h3>
+                    <h3 class="card-title">Tech Sharing</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A brief overview of the tech topic. Share your thoughts, insights, or a tutorial on this subject.</p>
                 </div>
                 </div>
             </div>
             <div class="col-md-4 mb-md-0 mb-2">
                 <div class="card shadow-sm">
                 <div class="card-body">
-                    <i class="ri-rocket-fill ri-3x mb-5"></i>
-                    <h3 class="card-title">Card title</h3>
+                    <i class="ri-github-line ri-3x mb-5"></i>
+                    <h3 class="card-title">Github</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Here is my github repositories. You can checkout and find some my projects.</p>
                 </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
     <section class="services py-md-5 py-4" id="services">
         <div class="container py-md-5 py-4">
         <div class="divider-shape"></div>
-        <h2>Services</h2>
-        <p>This is the services section</p>
+        <h2>Tech sharing</h2>
+        <p>This is the tech sharing section</p>
         <div class="row mt-4">
             <div class="col-sm-4">
             <div class="card shadow-sm">
