--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <title>{% block title %}ngoctu125.com{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/base/base_styles.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/2.5.0/remixicon.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    {% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> {% endcomment %}
     {% block extra_head %}{% endblock extra_head %}
 </head>
 
@@ -30,8 +30,15 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#about">About</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'tech_sharing' %}">Tech Sharing</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="techSharingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Tech Sharing
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="techSharingDropdown">
+                                    {% for tech_topic in tech_topics %}
+                                        <li><a class="dropdown-item" href="{% url 'tech_sharing_by_topic' tech_topic.slug %}">{{ tech_topic.title }}</a></li>
+                                    {% endfor %}
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#address-bar">Contact</a>
