--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,7 @@
             <div class="row">
             <div class="col-md">
                 <div class="divider-shape"></div>
-                <h1 class="my-5">We are the best at Building brands!</h1>
-                <a href="#" class="btn btn-lg btn-main">Get Started</a>
+                <h1 class="my-5">{{ home_texts.home_intro }}</h1>
             </div>
             <div class="col-md"></div>
             </div>
@@ -27,7 +26,7 @@
                     <i class="ri-rocket-fill ri-3x mb-5"></i>
                     <h3 class="card-title">About me</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">Hello! I'm Tu. I'm a python developer in Viet Nam. Hope you like it.</p>
+                    <p class="card-text">{{ home_texts.home_about }}</p>
                 </div>
                 </div>
             </div>
@@ -37,7 +36,7 @@
                     <i class="ri-pie-chart-2-fill ri-3x mb-5"></i>
                     <h3 class="card-title">Tech Sharing</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">A brief overview of the tech topic. Share your thoughts, insights, or a tutorial on this subject.</p>
+                    <p class="card-text">{{ home_texts.home_tech_sharing }}</p>
                 </div>
                 </div>
             </div>
@@ -47,7 +46,7 @@
                     <i class="ri-github-line ri-3x mb-5"></i>
                     <h3 class="card-title">Github</h3>
                     <div class="divider-shape"></div>
-                    <p class="card-text">Here is my github repositories. You can checkout and find some my projects.</p>
+                    <p class="card-text">{{ home_texts.home_github_repo }}</p>
                 </div>
                 </div>
             </div>
@@ -59,85 +58,18 @@
         <div class="container py-md-5 py-4">
         <div class="divider-shape"></div>
         <h2>Tech sharing</h2>
-        <p>This is the tech sharing section</p>
+        <p>This is all of the tech sharing sections.</p>
         <div class="row mt-4">
+            {% for tech_topic in tech_topics %}
             <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Digital Marketing</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
+                <div class="card shadow-sm" onclick="location.href='{% url 'tech_sharing_by_topic' tech_topic.slug %}';" style="cursor: pointer;">
+                    <div class="card-body d-flex justify-content-between">
+                    <h4 class="nav-link card-title">{{ tech_topic.title }}</h4>
+                    <i class="ri-arrow-right-line fs-2"></i>
+                    </div>
                 </div>
             </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Social Media</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">SEO</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Paid Advertisement</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Email Marketing</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Conversion optimization</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Reputation Management</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Influencer Marketing</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-            <div class="col-sm-4">
-            <div class="card shadow-sm">
-                <div class="card-body d-flex justify-content-between">
-                <h4 class="card-title">Facebook Marketing</h4>
-                <i class="ri-arrow-right-line fs-4"></i>
-                </div>
-            </div>
-            </div>
-        </div>
+            {% endfor %}
         </div>
         </div>
     </section>
@@ -146,8 +78,8 @@
         <div class="row">
             <div class="col-6">
             <div class="divider-shape mb-2"></div>
-            <h2>About us</h2>
-            <p>Our company at glance.</p>
+            <h2>Github</h2>
+            <p>This is my Github repositories.</p>
             </div>
             <div class="col-6 d-flex align-items-center">
             <p>This is the text you would like to show on the about us section on the landing page copy of your website. Please make it apealing and awesome.</p>
@@ -156,7 +88,7 @@
         <div class="row">
             <div class="col-md-6 mb-md-0 mb-3">
             <div class="card card1 bg-dark text-white">
-                <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="...">
+                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
                 <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -166,7 +98,7 @@
             </div>
             <div class="col-md-6">
             <div class="card card2 bg-dark text-white mb-3">
-                <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="...">
+                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
                 <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -174,7 +106,7 @@
                 </div>
             </div>
             <div class="card card3 bg-dark text-white">
-                <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="...">
+                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
                 <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
