--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-md-4 mb-md-0 mb-2">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm" onclick="window.location.href='https://github.com/Ngoc-Tu-125';" style="cursor: pointer;">
                 <div class="card-body">
                     <i class="ri-github-line ri-3x mb-5"></i>
                     <h3 class="card-title">Github</h3>
@@ -81,39 +81,19 @@
             <h2>Github</h2>
             <p>This is my Github repositories.</p>
             </div>
-            <div class="col-6 d-flex align-items-center">
-            <p>This is the text you would like to show on the about us section on the landing page copy of your website. Please make it apealing and awesome.</p>
-            </div>
         </div>
         <div class="row">
-            <div class="col-md-6 mb-md-0 mb-3">
-            <div class="card card1 bg-dark text-white">
-                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
-                <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+            {% for repo in github_repos %}
+                <div class="col-md-4 mb-3">
+                    <div class="card bg-dark text-white">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ repo.name }}</h5>
+                            <p class="card-text">{{ repo.description }}</p>
+                            <a href="{{ repo.html_url }}" class="btn btn-primary btn-git-view">View on GitHub</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            </div>
-            <div class="col-md-6">
-            <div class="card card2 bg-dark text-white mb-3">
-                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
-                <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
-                </div>
-            </div>
-            <div class="card card3 bg-dark text-white">
-                {% comment %} <img src="https://images.unsplash.com/photo-1608181114410-db2af03d946f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" class="card-img" alt="..."> {% endcomment %}
-                <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
-                </div>
-            </div>
-            </div>
+            {% endfor %}
         </div>
         </div>
     </section>
