--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#address-bar">Contact</a>
+                                <a class="nav-link" href="{% url 'contacts' %}">Contact</a>
                             </li>
                         </ul>
                     </div>
