--- a/templates/home.html
+++ b/templates/home.html
@@ -101,17 +101,29 @@
         <div class="container py-md-5 py-4">
         <div class="row">
             <div class="col-md-4  d-md-flex align-items-center">
-            <ul class="list-unstyled">
-                <li class="d-inline pe-2"><i class="ri-facebook-line btn btn-main ri-3x"></i></li>
-                <li class="d-inline pe-2"><i class="ri-twitter-line btn btn-main ri-3x"></i></li>
-                <li class="d-inline pe-2"><i class="ri-instagram-line btn btn-main ri-3x"></i></li>
-            </ul>
+                <ul class="list-unstyled">
+                    <li class="d-inline pe-2">
+                        <a href="{{ contacts.contacts_facebook }}" class="btn btn-main">
+                            <i class="ri-facebook-line ri-3x"></i>
+                        </a>
+                    </li>
+                    <li class="d-inline pe-2">
+                        <a href="{{ contacts.contacts_instagram }}" class="btn btn-main">
+                            <i class="ri-instagram-line ri-3x"></i>
+                        </a>
+                    </li>
+                    <li class="d-inline pe-2">
+                        <a href="{{ contacts.contacts_linkedin }}" class="btn btn-main">
+                            <i class="ri-linkedin-box-fill ri-3x"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="col-md-4 d-flex justify-content-center  align-items-center  my-md-0 my-3">
             <h2>Let's Connect</h2>
             </div>
             <div class="col-md-4 d-md-flex justify-content-end  align-items-center">
-            <a href="#" class="btn btn-main btn-lg">Let Me Connect!</a>
+            <a href="{% url 'contacts' %}" class="btn btn-main btn-lg">Let Me Connect!</a>
             </div>
         </div>
         </div>
