--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -11,7 +11,7 @@
         <div class="col-md-4 mb-3">
             <div class="card card-contacts" onclick="window.location.href='{{ contacts.contacts_facebook }}';" style="cursor: pointer;">
                 <div class="card-body d-flex justify-content-between">
-                    <h4 class="nav-link card-title">Facebook</h4>
+                    <h4 class="nav-link card-dark-title">Facebook</h4>
                     <i class="ri-facebook-line fs-2"></i>
                 </div>
             </div>
@@ -19,7 +19,7 @@
         <div class="col-md-4 mb-3">
             <div class="card card-contacts" onclick="window.location.href='{{ contacts.contacts_instagram }}';" style="cursor: pointer;">
                 <div class="card-body d-flex justify-content-between">
-                    <h4 class="nav-link card-title">Instagram</h4>
+                    <h4 class="nav-link card-dark-title">Instagram</h4>
                     <i class="ri-instagram-line fs-2"></i>
                 </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="col-md-4 mb-3">
             <div class="card card-contacts" onclick="window.location.href='{{ contacts.contacts_linkedln }}';" style="cursor: pointer;">
                 <div class="card-body d-flex justify-content-between">
-                    <h4 class="nav-link card-title">Linkedln</h4>
+                    <h4 class="nav-link card-dark-title">Linkedln</h4>
                     <i class="ri-linkedin-box-fill fs-2"></i>
                 </div>
             </div>
