--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
             <div class="col-sm-4">
                 <div class="card shadow-sm" onclick="location.href='{% url 'tech_sharing_by_topic' tech_topic.slug %}';" style="cursor: pointer;">
                     <div class="card-body d-flex justify-content-between">
-                    <h4 class="nav-link card-title">{{ tech_topic.title }}</h4>
+                    <h4 class="nav-link card-dark-title">{{ tech_topic.title }}</h4>
                     <i class="ri-arrow-right-line fs-2"></i>
                     </div>
                 </div>
