Auto load the first post

--- a/templates/tech_sharing.html
+++ b/templates/tech_sharing.html
@@ -40,13 +40,22 @@
                 <div class="sticky-top">
                     <ul id="sections-list" class="nav flex-column">
                         <li class="nav-item">1. Introduction (Placeholder)</li>
-                        <!-- Dynamic sections based on selected post's content -->
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Try to find the first tech-sharing title link
+        var firstPostLink = document.querySelector('.tech-sharing-title-link');
 
+        // If the link exists, simulate a click on it
+        if (firstPostLink) {
+            firstPostLink.click();
+        }
+    });
+</script>
 
 {% endblock content %}
