add about me page

--- a/templates/tech_sharing.html
+++ b/templates/tech_sharing.html
@@ -46,16 +46,6 @@
         </div>
     </div>
 </section>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Try to find the first tech-sharing title link
-        var firstPostLink = document.querySelector('.tech-sharing-title-link');
-
-        // If the link exists, simulate a click on it
-        if (firstPostLink) {
-            firstPostLink.click();
-        }
-    });
-</script>
+<script src="{% static 'js/tech_sharing/auto_load_first_post.js' %}"></script>
 
 {% endblock content %}
