--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="{% url 'home' %}">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
+                                <a class="nav-link" href="{% url 'about_me' %}">About</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="techSharingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
